# GitFunction

./: Dockerfile  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  configure~  func.cpp  func.h  main  main.cpp  my_program  scriptA.sh  scriptB.sh  server.c  server.py  test_func  test_server.py
.github/workflows/: ci.yml  docker-multistage.yml
.pc/: applied-patches
.pc/dpkg-source--commit/: Makefile.am  Makefile.in
.pc/dpkg-source--commit/.github/workflows/: ci.yml
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
debian/: README.Debian  README.source  autoreconf.after  autoreconf.before  changelog  control  copyright  gitfunction.cron.d.ex  gitfunction.doc-base.ex  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/patches/: dpkg-source--commit
debian/source/: options
tests/: Makefile.am  test_func.cpp
